# kube-resource-report

./: .flake8  .gitignore  .pre-commit-config.yaml  .tool-versions  .travis.yml  Dockerfile  Makefile  Pipfile  README.rst  aws-ec2-costs-hourly-eu-central-1.csv  cluster_discovery.py  filters.py  hack.py  pyproject.toml  report.py  test_report.py  tox.ini
chart/kube-resource-report/: Chart.yaml  values.yaml
deploy/: configmap.yaml  deployment-with-cm.yaml  deployment.yaml  kustomization.yaml  rbac.yaml  service.yaml
deploy/base/: kustomization.yaml
kube_resource_report/: __init__.py  aws-ec2-costs-monthly.csv  aws-ec2-spot-costs-monthly.csv  cluster_discovery.py  example_hooks.py  filters.py  gcp-costs-monthly.csv  histogram.py  main.py  metrics.py  output.py  pricing.py  query.py  recommender.py  report.py  routegroup.py  utils.py  vpa.py
kube_resource_report/templates/: application.html  applications.html  base.html  cluster.html  clusters.html  elements.html  index.html  ingresses.html  loading.html  namespace_usage.html  namespaces.html  node.html  nodes.html  pods.html  routegroups.html  team.html  teams.html
sample-report/: Dockerfile  Makefile  application-registry.py  generate-report.sh
sample-report/deploy/: deployment.yaml  service.yaml
templates/: applications.html  base.html  cluster.html  clusters.html  index.html  ingresses.html  kube-resource-report.css  pods.html  team.html  teams.html
tests/: conftest.py  test_ema.py  test_histogram.py  test_main.py  test_metrics.py  test_query.py  test_recommender.py  test_report.py
(+36 files in other folders)
